# carousel-gen

./: .gitignore  .vercelignore  README.md  database-schema.sql  next.config.js  package-lock.json  package.json  tailwind.config.ts
api/: README.md  main.py  pyproject.toml
api/trash_scripts/: main_reference.py  main_reference_2.py
api/vercel_fastapi_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/generate/: route.ts
src/app/api/placeholder/: route.ts
src/app/api/slides-download/: route.ts
src/app/auth/callback/: page.tsx
src/app/auth/login/: page.tsx
src/app/carousel/: page.tsx
src/app/dashboard/: page.tsx
src/app/settings/: page.tsx  page.tsx.disabled
src/components/: AuthModal.tsx  CanvasEditor.tsx  CarouselGallery.tsx  CarouselPreview.tsx  DashboardHeader.tsx  ExportModal.tsx  LandingPage.tsx  PromptEditor.tsx  StyleSelector.tsx  UsageStats.tsx  UserProfile.tsx
src/components/carousel-editor/: CarouselEditor.tsx  InstagramPreviewModal.tsx  ReplaceImageModal.tsx
src/components/carousel-editor/objects/: CircleObject.tsx  ImageObject.tsx  RectangleObject.tsx  SquareObject.tsx  TextObject.tsx
src/data/: blue-three-slides-style.json  kalshi-content.json  kalshi-style.json  mockData.ts  one-slide-test.json  template_1.json
src/hooks/: useAuth.ts
src/lib/database/: carousels.ts
src/lib/supabase/: client.ts  saveProject.ts  server.ts  service.ts
src/types/: database.ts  index.ts
