[project]
name = "vercel-fastapi-app"
version = "0.1.0"
description = "A simple FastAPI serverless function."
requires-python = ">=3.9"

dependencies = [
    "fastapi",
    "pydantic",
    "uvicorn",
    "google-genai"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
